Correct logo alignment in header type center

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -115,6 +115,16 @@
   align-items: center;
 }
 
+.header-center {
+  .header-content {
+    flex-grow: 1;
+
+    &:last-child {
+      justify-content: flex-end;
+    }
+  }
+}
+
 // Header-link
 .header-link {
   display: flex;
